[1.18.7] - Refactor tag duration report, remove parentRow field from TagDurationReportRowDto